<resources>
    <string name="app_name">LAB_1_2</string>
    <string name="add_products">Add Products</string>
    <string name="add_to_products">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="product_location">Product Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="products">Products</string>
    <string name="view_product">View Product</string>
    <string name="update_product">Update Product</string>
    <string name="delete_product">Delete Product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>