<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="264dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="37dp"
            android:text="@string/product_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="25dp"
            android:text="@string/product_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="80dp"
            android:layout_height="58dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="22dp"
            android:text="@string/product_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="85dp"
            android:layout_height="38dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="29dp"
            android:text="@string/product_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/name"
            android:layout_width="166dp"
            android:layout_height="20dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="93dp"
            android:text="@string/product_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price"
            android:layout_width="166dp"
            android:layout_height="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="93dp"
            android:text="@string/product_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/description"
            android:layout_width="163dp"
            android:layout_height="81dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="96dp"
            android:text="@string/product_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price" />

        <TextView
            android:id="@+id/location"
            android:layout_width="166dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="93dp"
            android:text="@string/product_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>